quill scrollbar fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,8 +6,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 .ql-editor {
   font-size: 18px;
+}
+
+.ql-container.ql-snow {
+  height: 400px;
   overflow-y: scroll;
 }
 
